fix: change z-index values to prevent overlapping, make displayName observable return undefined (#35)

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -7,12 +7,11 @@
 }
 
 .header-container {
-  margin: 12px 0;
   display: flex;
   justify-content: center;
   width: 100%;
   position: fixed;
-  z-index: 14;
+  z-index: 1102;
 }
 
 .app-content {
